Adedebacneknd fprm form sendling and uploading resumes

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                         </p>
                         <div class="button_wrapper">
                           <a href="" class="read_more hm_btn">read more</a>
+                          <a href="joinus.html" class="read_more hm_btn">join us</a>
                         </div>
                       </div>
                     </div>
