Adedebacneknd fprm form sendling and uploading resumes

--- a/index.html
+++ b/index.html
@@ -1185,7 +1185,9 @@
                 <div class="hm_form">
                   <div class="col-lg-10 col-md-12">
                     <h1>send a message</h1>
-                    <form class="form-inline">
+                    <form class="form-inline"action="https://api.web3forms.com/submit" method="POST"> 
+                      <input type="hidden" name="access_key" value="af0b7193-e1ba-42f6-a435-db4fb28a9f4a">
+                      <input type="hidden" name="website" value="handloom.life" />
                       <div class="form-group">
                         <input
                           type="text"
